native compile seemingly working sans audio